2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* libsteticui.csproj: Updated dependencies. We now depend on
	  gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Project.cs:
	* UndoQueue.cs:
	* WidgetDesigner.cs:
	* ProjectBackend.cs:
	* WidgetEditSession.cs: Added support for saving and restoring
	  the status of the designer, including the undo queue. This
	  allows implenting ISupportsProjectReload.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Metacity/Preview.cs: Remove debug code.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Windows/Preview.cs: Dont try to create a Win32 preview
	  window when not running on Windows.

2009-07-01  Lluis Sanchez Gual  <lluis@novell.com>

	* WidgetDesigner.cs:
	* ActionGroupDesigner.cs:
	* WidgetDesignerBackend.cs:
	* ActionGroupEditSession.cs: No more missing IntPtr
	  constructor exceptions.

2009-06-25  Lluis Sanchez Gual  <lluis@novell.com>

	* WidgetDesignerBackend.cs: Fix rendering of the window
	  decoration.

2009-06-25  Lluis Sanchez Gual  <lluis@novell.com>

	* WidgetDesigner.cs:
	* WidgetDesignerBackend.cs: Dispose is not guaranteed to be
	  called when destroying a widget. Use OnDestroyed instead.

2009-06-25  Mike Krüger  <mkrueger@novell.com>

	* WidgetDesignerBackend.cs: Draw dialog background.

2009-06-25  Mike Krüger  <mkrueger@novell.com>

	* WidgetDesignerBackend.cs: Draw checkboard background in the
	  gui designer instead of monochrome dialog background.

2009-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* PluggableWidget.cs: When replacing the child widget (because
	  of reloading of the project for example), make sure the old
	  one is destroyed.

2009-05-07  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* libsteticui.csproj: Updated.

	* Metacity/Theme.cs:
	* Metacity/FrameType.cs:
	* Metacity/FrameFlags.cs:
	* Metacity/ButtonLayout.cs:
	* Metacity/ObjectManager.cs: